fix ios scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6413,6 +6413,9 @@ section.text .text-column::-webkit-scrollbar-track {
 body *::-webkit-scrollbar {
   width: 10px; }
 
+* {
+  -webkit-overflow-scrolling: touch; }
+
 body *::-webkit-scrollbar-thumb {
   background-color: #ff0000; }
 
