--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -476,12 +476,13 @@ body *::-webkit-scrollbar
 	width: 10px;
 	
 }
-
-//test//
+*{
+    -webkit-overflow-scrolling: touch;
+}
 
 body *::-webkit-scrollbar-thumb
 {
-	background-color: #ff0000;
+	background-color: #ff0000; 
 
 }
 
